@@ -373,68 +373,6 @@ sub suicidefile
 	return EPrints::Config::get("var_path")."/indexer.suicide";
 }
 
-sub do_tick
-{
-	my $tickfile = EPrints::Index::tickfile();
-	open( TICK, ">$tickfile" );
-	print TICK <<END;
-# This file is recreated by the indexer to indicate
-# that the indexer is still running.
-END
-	close TICK;
-}
-
-sub write_pid
-{
-	my $pidfile = EPrints::Index::pidfile();
-	open( PID, ">$pidfile" ) || EPrints::abort( "Can't open $pidfile for writing: $!" );
-	print PID <<END;
-# This file is automatically generated to indicate what process ID
-# indexer is running as. If this file exists then indexer is assumed
-# to be running.
-END
-	print PID $$."\n";
-	print PID EPrints::Time::human_time()."\n";
-	close PID;
-}
-
-sub get_pid
-{
-	my $pidfile = EPrints::Index::pidfile();
-#	print "Reading $p->{pidfile}\n" if( $p->{noise} > 1 );
-	open( PID, $pidfile ) || EPrints::abort( "Could not open $pidfile: $!" );
-	my $pid;
-	while( <PID> )
-	{
-		s/\015?\012?$//s;
-		if( m/^\d+$/ )
-		{
-			$pid = $_;
-			last;
-		}
-	}
-	close PID;
-
-	return $pid;
-}
-
-sub has_stalled
-{
-	my $last_tick = EPrints::Index::get_last_tick();
-	return 1 if( $last_tick > 10*60 );
-	return 0;
-}
-
-sub get_last_tick
-{
-	my $tickfile = tickfile();
-	return undef unless( -e $tickfile );
-
-	# Comes back in fractions of days, so rescale	
-	my $age = ( -M $tickfile );
-	return $age*24*60*60;
-}
-
 sub indexlog
 {
 	my( $txt ) = @_;
@@ -447,55 +385,6 @@ sub indexlog
 
 	print STDERR "[".localtime()."] ".$txt."\n";
 }
-
-sub rolllogs
-{
-	my( $p ) = @_;
-
-	return if( $p->{loglevel} <= 0 );
-	return if( $p->{rollcount} <= 0 );
-
-	EPrints::Index::indexlog( "** End of log. Closing and rolling." ) if( $p->{loglevel} > 2 );
-	for( my $n = $p->{rollcount}; $n > 0; --$n )
-	{
-		my $src = $p->{logfile};	
-		if( $n > 1 ) { $src.='.'.($n-1); }
-		next unless( -f $src );
-		my $tgt = $p->{logfile}.'.'.$n;
-		rename( $src, $tgt ) || warn "Error renaming: $!";
-	}
-	close STDERR;
-	open( STDERR, ">>$p->{logfile}" ) || warn "Error opening: $p->{logfile}: $!";
-	select( STDERR );
-	$| = 1;
-}
-
-
-sub cleanup_indexer
-{
-	my( $p ) = @_;
-
-	EPrints::Index::indexlog( "** Control process $$ stopping..." ) if( $p->{loglevel} > 2 );
-	EPrints::Index::indexlog( "* Unlinking $p->{pidfile}" ) if( $p->{loglevel} > 3 );
-	unlink( $p->{pidfile} ) || die( "Can't unlink $p->{pidfile}" );
-	unlink( $p->{tickfile} ) || die( "Can't unlink $p->{tickfile}" );
-	if( defined $p->{kid} )
-	{
-		EPrints::Index::indexlog( "* Sending TERM signal to worker process: $p->{kid}" ) if( $p->{loglevel} > 2 );
-		kill 15, $p->{kid};
-	}
-
-	if( EPrints::Index::suicidal() ) 
-	{
-		unlink( EPrints::Index::suicidefile() );
-	}
-
-	EPrints::Index::indexlog( "** Control process $$ stopped", 1 ) if( $p->{loglevel} > 2 );
-	EPrints::Index::indexlog( "**** Indexer stopped" ) if( $p->{loglevel} > 0 );
-	EPrints::Index::indexlog() if( $p->{loglevel} > 0 );
-}
-
-
 
 sub do_index
 {
@@ -545,118 +434,6 @@ sub do_index
 
 	return $seen_action;
 }	
-
-sub is_running
-{
-	my $pidfile = EPrints::Index::pidfile();
-	return 0 if( !-e $pidfile );
-	return 1;
-}
-
-sub suicidal
-{
-	return 1 if( -e EPrints::Index::suicidefile() );
-	return 0;
-}
-
-sub stop
-{
-	# no params
-	return -1 if( !EPrints::Index::is_running );
-
-	my $suicidefile = EPrints::Index::suicidefile();
-	open( SUICIDE, ">$suicidefile" );
-	print SUICIDE <<END;
-# This file is recreated by the indexer to indicate
-# that the indexer should exit. 
-END
-	close SUICIDE;
-	
-	# give it 8 seconds
-	my $counter = 8;
-	for( 1..$counter )
-	{
-		if( !EPrints::Index::is_running )
-		{
-			return 1;
-		}
-		sleep 1;
-	}
-	
-	# That didn't work - try to stop it using the command-line
-	# approach.
-
-	my $bin_path = EPrints::Index::binfile();
-	system( "$bin_path", "stop" );
-	# give it 10 seconds
-	$counter = 10;
-	for( 1..$counter )
-	{
-		if( !EPrints::Index::is_running )
-		{
-			return 1;
-		}
-		sleep 1;
-	}
-	return 0 if( EPrints::Index::is_running );
-	return 1;
-}
-
-sub start
-{
-	my( $session ) = @_;
-
-	return -1 if( EPrints::Index::is_running );
-
-	EPrints::Index::_run_indexer( $session, "start" );	
-
-	# give it 10 seconds
-	my $counter = 10;
-	for( 1..$counter )
-	{
-		if( EPrints::Index::is_running )
-		{
-			return 1;
-		}
-		sleep 1;
-	}
-	return 0 if( !EPrints::Index::is_running );
-	return 1;
-}
-
-sub force_start
-{
-	my( $session ) = @_;
-
-	EPrints::Index::stop( $session );
-
-	unlink( EPrints::Index::pidfile() );
-	unlink( EPrints::Index::tickfile() );
-
-	return EPrints::Index::start( $session );
-}
-
-sub _run_indexer
-{
-	my( $session, $action ) = @_;
-	my $bin_path = EPrints::Index::binfile();
-	my $prog = <<END;
-use strict;
-use warnings;
-use POSIX 'setsid';
-chdir '/' or die "Can't chdir to /: \$!";
-open STDIN, '/dev/null'  or die "Can't read /dev/null: \$!";
-open STDOUT, '+>>', '/tmp/error_log' or die "Can't write to /dev/null: \$!";
-open STDERR, '>&STDOUT'  or die "Can't dup stdout: \$!";
-setsid or die "Can't start a new session: \$!";
-\$ENV{EPRINTS_NO_CHECK_USER} = 1;
-exec( "$bin_path", "$action" );
-END
-	$session->get_request->spawn_proc_prog( $EPrints::SystemSettings::conf->{executables}->{perl},
-		["-e", $prog ] );
-
-}
-
 
 1;
 
