@@ -7703,4 +7703,5 @@ EPRINTS-3.1-beta-2
 
 2008-08-11 tdb
  * Indexer should now stop if asked to stop while busy
+ * Removed redundant indexer control code
 
